Fix overflow attempt 2

--- a/challenge1/style.css
+++ b/challenge1/style.css
@@ -7,8 +7,8 @@
 
 /* -------------- General Styles -------------- */
 html {
-    scroll-behavior: smooth;
     overflow-x: hidden;
+    scroll-behavior: smooth;
     width: 100vw;
 }
 body {
@@ -17,6 +17,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-size: 1rem;
     overflow-x: hidden;
+    position:relative;
     width: 100vw;
 }
 header {
